# decentralized-software-updates

./: .gitignore  .stack-to-nix.cache  .stylish-haskell.yaml  Makefile  README.md  abstract.tex  appendix.tex  approval.tex  cabal.project  cancellation_properties.org  ccs-swupdates.aux  ccs-swupdates.bib  ccs-swupdates.out  ccs-swupdates.tex  consensus.tex  default.nix  deployment.tex  development.tex  governance.tex  ideation.tex  implementation.tex  introduction.tex  ledgerenh.tex  lifecycle.tex  logicarch.tex  privacy.tex  questions.org  questions_endorsement_cancellation.org  related_work.tex  release.nix  schedule_for_activation_properties.org  security.tex  shell.nix  stack.yaml  title.tex  updlogic.tex
.buildkite/: default.nix  pipeline.yml  rebuild.hs
datil/: README.md  datil.cabal
datil/src/Control/State/: DataAutomata.hs
datil/src/Control/State/DataAutomata/: Expr.hs
datil/src/Control/State/DataAutomata/Interpreter/: Gen.hs  Memory.hs  Run.hs  Trace.hs
datil/src/Control/State/DataAutomata/Interpreter/Run/: Test.hs
datil/src/Control/State/DataAutomata/Test/: Conformance.hs  Properties.hs  Run.hs
datil/test/examples/: Main.hs
datil/test/examples/Datil/Examples/: Echo.hs  FarmerCrossesRiver.hs  PingPong.hs
design-spec/: Makefile  (+7 more)
executable-spec/: decentralized-updates.cabal
executable-spec/bench/micro-benchmarking/: Main.hs
executable-spec/bench/micro-benchmarking/Cardano/Ledger/Benchmarks/Update/: Tally.hs
executable-spec/bench/micro-benchmarking/Cardano/Ledger/MBenchmarks/Update/Tally/: TallyMicroBenchmark.hs
executable-spec/bench/worst-case-analysis/: Main.hs
executable-spec/bench/worst-case-analysis/Cardano/Ledger/Benchmarks/Update/: WorstCaseAnalysis.hs
executable-spec/bench/worst-case-analysis/Cardano/Ledger/Benchmarks/Update/WorstCaseAnalysis/: PayloadSizes.hs
executable-spec/bench/worst-case-analysis/Cardano/Ledger/Benchmarks/Update/WorstCaseAnalysis/Report/: LaTeX.hs
executable-spec/bench/worst-case-analysis/Cardano/Ledger/Benchmarks/Update/WorstCaseAnalysis/Units/: .#TBPS.hs
executable-spec/docs/: about-our-testing-framework.org
executable-spec/src/Cardano/Ledger/: Assert.hs  Generators.hs  Update.hs
executable-spec/src/Cardano/Ledger/Generators/: QuickCheck.hs
executable-spec/src/Cardano/Ledger/Spec/Classes/: HasAdversarialStakeRatio.hs  HasAuthor.hs  HasSalt.hs  HasSigningScheme.hs  HasStakeDistribution.hs  HasVotingPeriodsCap.hs  Hashable.hs  Indexed.hs  Indexed2.hs  IsSU.hs  IsSUCommit.hs  IsVoteForSU.hs  Sizeable.hs  TracksSlotTime.hs
executable-spec/src/Cardano/Ledger/Spec/STS/: CanExtract.hs  Sized.hs  Update.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Chain/: Body.hs  Chain.hs  Data.hs  Header.hs  Transaction.hs  Transactions.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Common/: Compact.hs  Crypto.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Dummy/: Transaction.hs  UTxO.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Transaction/: Transaction.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Update/: Approval.hs  Data.hs  Definitions.hs  GenApproval.hs  Hupdate.hs  Ideation.hs  Implementation.hs  SIP.hs  TallyImplVotes.hs  Tallysip.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Update/Approval/: Data.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Update/Data/: Commit.hs
executable-spec/src/Cardano/Ledger/Spec/STS/Update/Ideation/: Data.hs
executable-spec/src/Cardano/Ledger/Spec/State/: ActivationState.hs  ActiveSIPs.hs  ActiveSUs.hs  ApprovedSIPs.hs  Ballot.hs  BallotSUs.hs  Participants.hs  ProposalState.hs  ProposalsState.hs  RevealedSIPs.hs  RevealedSUs.hs  SIPsVoteResults.hs  StakeDistribution.hs  SubmittedSIPs.hs  SubmittedSUs.hs  WhenActive.hs  WhenEnded.hs  WhenRevealedSIPs.hs  WhenRevealedSUs.hs  WhenStable.hs  WhenSubmittedSIPs.hs  WhenSubmittedSUs.hs
executable-spec/src/Cardano/Ledger/Test/: Mock.hs
executable-spec/src/Cardano/Ledger/Update/: Activation.hs  Approval.hs  Ideation.hs  Proposal.hs  ProposalState.hs  ProposalsState.hs
executable-spec/src/Cardano/Ledger/Update/Activation/: State.hs
executable-spec/src/Cardano/Ledger/Update/Env/: HasVotingPeriodsCap.hs  StakeDistribution.hs  TracksSlotTime.hs
executable-spec/test/: Main.hs  Properties.hs  SUTTest.hs  Trace.hs
executable-spec/test/Cardano/Ledger/: Mock.hs  UpdateSpec.hs
executable-spec/test/Cardano/Ledger/Generators/: QuickCheck.hs
executable-spec/test/Cardano/Ledger/Spec/SM/: Ideation.hs  Vote.hs
executable-spec/test/Cardano/Ledger/Spec/SM/Ideation/: Full.hs
executable-spec/test/Cardano/Ledger/Spec/STS/Chain/Chain/: Properties.hs
executable-spec/test/Cardano/Ledger/Spec/STS/SM/Update/Ideation/: Properties.hs
executable-spec/test/Cardano/Ledger/Spec/STS/SM/Update/Ideation/Full/: Properties.hs
executable-spec/test/Cardano/Ledger/Spec/STS/SM/Update/Ideation/Properties/: Conformance.hs
executable-spec/test/Cardano/Ledger/Spec/STS/Update/Approval/: UnitTests.hs
executable-spec/test/Cardano/Ledger/Spec/STS/Update/Ideation/: Properties.hs
executable-spec/test/Cardano/Ledger/Update/: Interface.hs  TestCase.hs
executable-spec/test/Cardano/Ledger/Update/UnitTests/: Activation.hs  Approval.hs  Common.hs  Ideation.hs
executable-spec/test/Test/Cardano/Ledger/: UpdateSpec.hs
executable-spec/test/Test/Cardano/Ledger/Update/: Data.hs  Events.hs  Interface.hs  Properties.hs  TestCase.hs
executable-spec/test/Test/Cardano/Ledger/Update/Data/: MockProposal.hs
executable-spec/test/Test/Cardano/Ledger/Update/Properties/: CBORSerialisation.hs  Coverage.hs  Liveness.hs  SimpleScenario.hs  StateChangeValidity.hs  UpdateSUT.hs
executable-spec/test/Test/Cardano/Ledger/Update/UnitTests/: Activation.hs  Approval.hs  Ideation.hs
executable-spec/test/Trace/: Generation.hs  PropertyTesting.hs
executable-spec/test/Util/: TestCase.hs
oddchain/: README.md  demo.hs  oddchain.cabal
oddchain/app/oddnode/: Main.hs
oddchain/app/oddwallet/: Main.hs
oddchain/src/: OddChain.hs  OddNode.hs  OddWallet.hs
oddchain/test/: Main.hs
oddchain/test/Test/: OddChain.hs
oddchain/test/Test/ThreadNet/: OddChain.hs
(+185 files in other folders)
