name:                datil
version:             0.1.0.0
synopsis:            Data-Automata Testing and Interpretation Library
description:         Define, test, and interpret data automata models.
license:             Apache
license-file:        LICENSE
author:              IO Research and IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2019 IOHK
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.State.DataAutomata
                     , Control.State.DataAutomata.Expr
                     , Control.State.DataAutomata.Interpreter.Gen
                     , Control.State.DataAutomata.Interpreter.Memory
                     , Control.State.DataAutomata.Interpreter.Run
                     , Control.State.DataAutomata.Interpreter.Trace
                     , Control.State.DataAutomata.Test.Conformance
                     , Control.State.DataAutomata.Test.Run
  build-depends:       base >=4.11 && <5
                     , containers
                     , mtl
                     , pretty-simple
                     , QuickCheck
                     , text
                     -- Dependencies needed for testing models
                     , tasty
                     , tasty-quickcheck
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

test-suite datil-examples
  hs-source-dirs:      test/examples/
  main-is:             Main.hs
  other-modules:       Datil.Examples.Echo
                     , Datil.Examples.FarmerCrossesRiver
                     -- , Datil.Examples.RacingTurtles -- Show cancellation
                     -- , Datil.Examples.Thermostat    -- Naybe for integrated shrinking
                     , Datil.Examples.PingPong
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck
                     , datil
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -- Stack and heap bounds are determined ad-hoc.
                       "-with-rtsopts=-K1m -M150m"
                       -threaded
                       -rtsopts
