name:                decentralized-updates
version:             0.1.0.0
synopsis:            Decentralized updates for Cardano
description:         A prototype for a decentralized update mechanism for Cardano
license:             Apache
license-files:       LICENSE
                     NOTICE
author:              IO Research and IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Ledger.Generators.QuickCheck
                     , Cardano.Ledger.Spec.Classes.Indexed
                     , Cardano.Ledger.Spec.Classes.Hashable
                     , Cardano.Ledger.Spec.Classes.HasAuthor
                     , Cardano.Ledger.Spec.Classes.HasSalt
                     , Cardano.Ledger.Spec.Classes.HasSigningScheme
                     , Cardano.Ledger.Spec.Classes.Sizeable
                     , Cardano.Ledger.Spec.State.ActiveSIPs
                     , Cardano.Ledger.Spec.State.ApprovedSIPs
                     , Cardano.Ledger.Spec.State.Ballot
                     , Cardano.Ledger.Spec.State.Participants
                     , Cardano.Ledger.Spec.State.ProposalState
                     , Cardano.Ledger.Spec.State.ProposalsState
                     , Cardano.Ledger.Spec.State.RevealedSIPs
                     , Cardano.Ledger.Spec.State.SIPsVoteResults
                     , Cardano.Ledger.Spec.State.StakeDistribution
                     , Cardano.Ledger.Spec.State.SubmittedSIPs
                     , Cardano.Ledger.Spec.State.WhenActive
                     , Cardano.Ledger.Spec.State.WhenEnded
                     , Cardano.Ledger.Spec.State.WhenRevealedSIPs
                     , Cardano.Ledger.Spec.State.WhenStable
                     , Cardano.Ledger.Spec.State.WhenSubmittedSIPs
                     , Cardano.Ledger.Spec.STS.Chain.Chain
                     , Cardano.Ledger.Spec.STS.Chain.Header
                     , Cardano.Ledger.Spec.STS.Chain.Body
                     , Cardano.Ledger.Spec.STS.Chain.Data
                     , Cardano.Ledger.Spec.STS.Chain.Transaction
                     , Cardano.Ledger.Spec.STS.Dummy.UTxO
                     , Cardano.Ledger.Spec.STS.Sized
                     , Cardano.Ledger.Spec.STS.Update
                     , Cardano.Ledger.Spec.STS.Update.Approval
                     , Cardano.Ledger.Spec.STS.Update.Approval.Data
                     , Cardano.Ledger.Spec.STS.Update.Hupdate
                     , Cardano.Ledger.Spec.STS.Update.Tallysip
                     , Cardano.Ledger.Spec.STS.Update.TallyImplVotes
                     , Cardano.Ledger.Spec.STS.Update.Data
                     , Cardano.Ledger.Spec.STS.Update.Data.Commit
                     , Cardano.Ledger.Spec.STS.Update.Ideation
                     , Cardano.Ledger.Spec.STS.Update.Ideation.Data
                     , Cardano.Ledger.Spec.STS.Update.Implementation
                     , Cardano.Ledger.Spec.STS.Update.Definitions
                     , Cardano.Ledger.Test.Mock
  build-depends:       base >=4.11 && <5
                     , bimap >= 0.4.0
                     , containers
                     , generic-monoid
                     , QuickCheck
                     , random
                     , text
                     -- Cardano specific imports
                     , cardano-binary
                     , cardano-crypto-class
                     , small-steps
                     , cs-ledger
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

test-suite ledger-rules-test
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  other-modules:       Cardano.Ledger.Spec.SM.Ideation
                     , Cardano.Ledger.Spec.SM.Ideation.Full
                     , Cardano.Ledger.Spec.SM.Vote
                     , Cardano.Ledger.Spec.STS.Chain.Chain.Properties
                     , Cardano.Ledger.Spec.STS.Update.Ideation.Properties
                     , Cardano.Ledger.Spec.STS.SM.Update.Ideation.Properties
                     , Cardano.Ledger.Spec.STS.SM.Update.Ideation.Full.Properties
                     , Cardano.Ledger.Spec.STS.SM.Update.Ideation.Vote.Properties
                     , Cardano.Ledger.Spec.STS.SM.Update.Ideation.Properties.Conformance
                     , Cardano.Ledger.Update.Interface
                     , Cardano.Ledger.Spec.STS.Update.Approval.UnitTests
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , mtl
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     -- Cardano specific imports
                     , cardano-crypto-class
                     , cardano-binary
                     , decentralized-updates
                     , cs-ledger
                     , small-steps
                     -- Internal libraries
                     , datil
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -- We set a bound here so that we're alerted of potential
                       -- space leaks in our generators (or test) code.
                       --
                       -- The 4 megabytes stack bound and 150 megabytes heap bound were
                       -- determined ad-hoc.
                       "-with-rtsopts=-K1m -M150m"
                       -threaded
                       -rtsopts

benchmark update-benchmarking
  hs-source-dirs:        bench/worst-case-analysis
                       , bench/micro-benchmarking 
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:         base
                       , decentralized-updates
                       , containers
                       , cs-ledger
                       , cardano-crypto-class
                       , criterion
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       "-with-rtsopts=-K1m -M15m"
                       -threaded
                       -rtsopts
  other-modules:       Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.PayloadSizes
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Units
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Arithmetic
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Units.TBPS
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Report.LaTeX
                     , Cardano.Ledger.MBenchmarks.Update.Tally.TallyMicroBenchmark

