name:                decentralized-updates
version:             0.1.0.0
synopsis:            Decentralized updates for Cardano
description:         A prototype for a decentralized update mechanism for Cardano
license:             Apache
license-files:       LICENSE
                     NOTICE
author:              IO Research and IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2019 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

flag pretty
  description: Enable pretty printing of error mesages and debug traces
  manual:      True
  default:     True


library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Ledger.Update
                     -- Data
                     , Cardano.Ledger.Update.Proposal
                     -- Phases
                     , Cardano.Ledger.Update.Ideation
                     , Cardano.Ledger.Update.Approval
                     , Cardano.Ledger.Update.Activation
                     -- State
                     , Cardano.Ledger.Update.ProposalState
                     , Cardano.Ledger.Update.ProposalsState
                     , Cardano.Ledger.Update.Activation.State
                     -- Environment constraints
                     , Cardano.Ledger.Update.Env.TracksSlotTime
                     , Cardano.Ledger.Update.Env.HasStakeDistribution
                     , Cardano.Ledger.Update.Env.HasAdversarialStakeRatio
                     , Cardano.Ledger.Update.Env.HasVotingPeriodsCap
                     , Cardano.Ledger.Update.Env.StakeDistribution
                     -- Non-update specific modules. Can be extracted to a
                     -- library if needed somewhere else.
                     , Cardano.Ledger.Assert
                     , Cardano.Ledger.Debug
  build-depends:       base >=4.11 && <5
                     , containers
                     , text
                     , strict-base-types
                     , pretty-simple
                     , random
                     -- Cardano specific imports
                     , cardano-prelude
                     , cardano-slotting
                     -- Needed for 'Cardano.Ledger.Assert' only. We might want
                     -- to put this module on our test section.
                     , monad-validate
                     , Unique
                     -- Needed for 'Cardano.Ledger.Debug' only.
                     , mtl
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-ignore-asserts
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts
    cpp-options:       -DENABLE_ASSERTIONS
  if flag(pretty)
    cpp-options:       -DPRETTY_PRINT


test-suite ledger-rules-test
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  other-modules:       Test.Cardano.Ledger.Update.Data
                     , Test.Cardano.Ledger.Update.Data.MockProposal
                     -- Unit tests
                     , Test.Cardano.Ledger.Update.UnitTests.Ideation
                     , Test.Cardano.Ledger.Update.UnitTests.Approval
                     , Test.Cardano.Ledger.Update.UnitTests.Activation
                     , Test.Cardano.Ledger.Update.UnitTests.Common
                     -- Property tests
                     , Test.Cardano.Ledger.Update.Properties
                     , Test.Cardano.Ledger.Update.Properties.UpdateSUT
                     , Test.Cardano.Ledger.Update.Properties.SimpleScenario
                     , Test.Cardano.Ledger.Update.Properties.Liveness
                     , Test.Cardano.Ledger.Update.Properties.StateChangeValidity
                     , Test.Cardano.Ledger.Update.Events
                     , Test.Cardano.Ledger.Update.Properties.Examples
                     -- Test case specification
                     , Test.Cardano.Ledger.UpdateSpec
                     , Test.Cardano.Ledger.Update.TestCase
                     , Test.Cardano.Ledger.Update.Interface
                     -- Unit testing
                     , Util.TestCase
                     -- Property testing
                     , SystemUnderTest
                     , Trace
                     , Trace.Scenario
                     , Trace.Generation
                     , Trace.PropertyTesting
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , mtl
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , pretty-simple
                     , text
                     , random
                     , successors
                     -- Cardano specific imports
                     , cardano-slotting
                     , decentralized-updates
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -- We set a bound here so that we're alerted of potential
                       -- space leaks in our generators (or test) code.
                       --
                       -- The 4 megabytes stack bound and 150 megabytes heap bound were
                       -- determined ad-hoc.
                       "-with-rtsopts=-K1m -M150m"
                       -threaded
                       -rtsopts
                       -fno-ignore-asserts

benchmark worst-case-analysis
  hs-source-dirs:      bench/worst-case-analysis
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       "-with-rtsopts=-K1m -M15m"
                       -threaded
                       -rtsopts
  other-modules:       Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.PayloadSizes
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Units
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Arithmetic
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Units.TBPS
                     , Cardano.Ledger.Benchmarks.Update.WorstCaseAnalysis.Report.LaTeX


benchmark update-benchmarking
  hs-source-dirs:      bench/micro-benchmarking
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base
                     , containers
                     , criterion
                     , cryptonite
                     , pretty-simple
                       -- Dependencies needed for defining the bench hashing
                     , cborg
                     , bytestring
                     , memory
                       -- Cardano deps
                     , cardano-prelude
                     , cardano-slotting
                     , cardano-binary
                     , decentralized-updates

  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -- We use large maps for storing and manilpulating data
                       -- (for instance, we have a maximum 10M proposals). Hence
                       -- we need to set very large heap limits.
                       "-with-rtsopts=-K1m -M6500m"
                       -threaded
                       -rtsopts
  other-modules:       Cardano.Ledger.Benchmarks.Update.Tally
