name:                oddchain
version:             0.1.0.0
synopsis:            A blockchain consisting of odd numbers only
description:         An example of integrating custom ledger with ouroboros-consensus
license:             Apache
license-files:       LICENSE
                     NOTICE
author:              IO Research and IOHK Formal Methods Team
maintainer:          formal.methods@iohk.io
copyright:           2020 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OddChain
                     , OddNode
                     , OddWallet
  build-depends:       base >=4.11 && <5
                     , binary
                     , bytestring
                     , cborg
                     , containers
                     , cryptonite
                     , fingertree
                     , mtl
                     , serialise
                     , time
                     -- Cardano specific libraries.
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-prelude
                     , cardano-slotting
                     , ouroboros-consensus
                     , ouroboros-network
                     -- Required for running a (Cardano) node
                     , contra-tracer
                     , iohk-monitoring
                     , text
                     , network
                     , ouroboros-network-framework
                     -- Required for the wallet
                     , network-mux
                     , typed-protocols
                     -- Additional packages for pretty printing
                     , pretty-simple
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints

test-suite odd-tests
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.OddChain
                     , Test.ThreadNet.OddChain
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring
                     , containers
                     , cborg
                     , cryptonite
                     , mtl
                     , serialise
                     , base16-bytestring
                     , tasty
                     , tasty-quickcheck
                     , time
                     , QuickCheck
                     -- IOHK deps
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-slotting
                     , oddchain
                     , ouroboros-consensus
                     , ouroboros-network
                     , ouroboros-consensus-test-infra
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       "-with-rtsopts=-K1m -M50m"
                       -threaded
                       -rtsopts

executable oddnode
  hs-source-dirs:      app/oddnode
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       "-with-rtsopts=-K1m -M250m"
                       -threaded
                       -rtsopts
  build-depends:       base >=4.12 && <5
                     , directory
                     , optparse-generic
                     , time
                     -- Local deps
                     , oddchain
                     , ouroboros-consensus
                     , ouroboros-network

executable oddwallet
  hs-source-dirs:      app/oddwallet
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       "-with-rtsopts=-K1m -M50m"
                       -threaded
                       -rtsopts
  build-depends:       base >=4.12 && <5
                     , optparse-generic
                     -- Local deps
                     , oddchain
                     , ouroboros-consensus
                     , ouroboros-network
